add: complete dto convert sysuser